fixed bug; visibility of navigation on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ html, body {
     }
 
     .navigation {
+        bottom: 10vh;
         width: 100vw;
     }
 
